# Antigravity

./: .env.example  .gitignore  README.md  airtable_client.py  airtable_setup.py  apify_client_helper.py  app_config.py  create_airtable_tables.py  errors.py  fix_summary.md  intent_handler.py  main.py  movie_data.py  perplexity_client.py  pyproject.toml  recommendation_engine.py  redis_cache.py  replit.md  session_store.py  supabase_client.py  supabase_schema.sql  telegram_helpers.py  test_architecture.py  test_suite.py  worker.py
adapters/: apify_adapter.py  perplexity_adapter.py  watchmode_adapter.py
attached_assets/: Pasted--Pasupuleti-start-Jobs-Welcome-Movie-Fan-I-m-your-perso_1775733417783.txt  Pasted-You-are-an-expert-automation-engineer-operating-via-Zap_1775732452487.txt
clients/: omdb_client.py  perplexity_client.py  telegram_helpers.py  watchmode_client.py
config/: app_config.py  redis_cache.py  supabase_client.py
handlers/: __init__.py  admin_handlers.py  callback_handlers.py  common.py  dispatch.py  normalizer.py  rec_handlers.py  user_handlers.py
repositories/: admin_repository.py  api_usage_repository.py  base_repository.py  feedback_repository.py  history_repository.py  metadata_repository.py  movie_mixin.py  session_repository.py  trailer_repository.py  user_repository.py  watchlist_repository.py
scripts/: e2e_realtime_verify.py
services/: bot_service.py  container.py  discovery_service.py  health_service.py  logging_service.py  movie_service.py  queue_service.py  recommendation_engine.py  recommendation_service.py  semantic_service.py  (+3 more)
(+104 files in other folders)
