[project]
name = "cinemate-bot"
version = "0.1.0"
description = "CineMate — Telegram movie recommendation bot"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "redis>=5.0.1",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]
